feat: add static home screen

--- a/ClientDocGFS/Views/MainWindow.axaml
+++ b/ClientDocGFS/Views/MainWindow.axaml
@@ -3,18 +3,16 @@
         xmlns:vm="using:ClientDocGFS.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        xmlns:views="clr-namespace:ClientDocGFS.Views"
+        mc:Ignorable="d" d:DesignWidth="650" d:DesignHeight="620"
         x:Class="ClientDocGFS.Views.MainWindow"
+        CanResize="False"
+        Width="700" Height="620"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
-        Title="ClientDocGFS">
+        Title="GFS - Client Document Generator">
 
-    <Design.DataContext>
-        <!-- This only sets the DataContext for the previewer in an IDE,
-             to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-        <vm:MainWindowViewModel/>
-    </Design.DataContext>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <views:HomeView />
 
 </Window>
