--- a/ClientDocGFS/Views/AddClientBusinessInfoPart1View.axaml
+++ b/ClientDocGFS/Views/AddClientBusinessInfoPart1View.axaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              xmlns:vm="using:ClientDocGFS.ViewModels"
-             x:DataType="vm:AddClientViewModel"
-             x:Class="ClientDocGFS.Views.AddClientView">
-    Aanmaken van een klant
+             x:DataType="vm:AddClientBusinessInfoPart1View"
+             x:Class="ClientDocGFS.Views.AddClientBusinessInfoPart1View">
+    
 </UserControl>
