--- a/ClientDocGFS/Views/ManageClientsView.axaml
+++ b/ClientDocGFS/Views/ManageClientsView.axaml
@@ -6,5 +6,35 @@
              xmlns:vm="using:ClientDocGFS.ViewModels"
              x:DataType="vm:ManageClientsViewModel"
              x:Class="ClientDocGFS.Views.ManageClientsView">
-    Manage Clients that are already created (with SQLlite)
+    <Grid Margin="0,20,0,0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="12.5*"></RowDefinition>
+            <RowDefinition Height="62.5*"></RowDefinition>
+            <RowDefinition Height="25*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Label Grid.Row="0" HorizontalAlignment="Center" Foreground="#7e97a9" FontSize="24">Overzicht KLanten</Label>
+
+        <Grid Grid.Row="1">
+            <DataGrid Name="Clients" ItemsSource="{Binding Clients}"></DataGrid>
+        </Grid>
+        
+        <Grid Grid.Row="2" ColumnDefinitions="Auto,Auto">
+            <Image Grid.Column="0" Source="../Assets/gfs_background_logo_cropped.png" HorizontalAlignment="Left"></Image>
+
+            <Grid Grid.Column="1" ColumnDefinitions="Auto, Auto" HorizontalAlignment="Center">
+                <Button Grid.Column="0" Margin="0,0,0,0"
+                        Background="#be1635" Foreground="White" FontSize="16"
+                        x:CompileBindings="False"
+                        Command="{Binding $parent[Window].DataContext.BackToHome}">
+                    Terug
+                </Button>
+                <Button Grid.Column="1" Margin="0,0,0,0"
+                        Background="#be1635" Foreground="White" FontSize="16"
+                        x:CompileBindings="False"
+                        Command="{Binding $parent[Window].DataContext.GoToFormStep2}">
+                    Volgende
+                </Button>
+            </Grid>
+        </Grid>
+    </Grid>
 </UserControl>
