--- a/ClientDocGFS/Views/AddClientBusinessInfoPart1View.axaml
+++ b/ClientDocGFS/Views/AddClientBusinessInfoPart1View.axaml
@@ -50,7 +50,7 @@
                 <Button Grid.Column="1" Margin="0,0,0,0"
                         Background="#be1635" Foreground="White" FontSize="16"
                         x:CompileBindings="False"
-                        Command="{Binding $parent[Window].DataContext.GoToFormStep2}">
+                        Command="{Binding $parent[Window].DataContext.GoToResult}">
                     Volgende
                 </Button>
             </Grid>
